--- a/package.json
+++ b/package.json
@@ -22,8 +22,10 @@
     "@angular/router": "^6.1.0",
     "@ng-bootstrap/ng-bootstrap": "^4.0.0",
     "@types/googlemaps": "^3.30.16",
+    "angular-calendar": "^0.26.4",
     "bootstrap": "^4.1.3",
     "core-js": "^2.5.4",
+    "date-fns": "^1.29.0",
     "ng-snotify": "^4.3.1",
     "rxjs": "~6.2.0",
     "zone.js": "~0.8.26"
