--- a/angular.json
+++ b/angular.json
@@ -20,8 +20,7 @@
             "tsConfig": "src/tsconfig.app.json",
             "assets": [
               "src/favicon.ico",
-              "src/assets",
-              "src/dist"
+              "src/assets"
             ],
             "styles": [
               "src/styles.css",
