--- a/package.json
+++ b/package.json
@@ -23,8 +23,10 @@
     "@ng-bootstrap/ng-bootstrap": "^4.0.0",
     "@types/googlemaps": "^3.30.16",
     "bootstrap": "^4.1.3",
+    "chart.js": "^2.7.3",
     "core-js": "^2.5.4",
     "ng-snotify": "^4.3.1",
+    "ng2-charts": "^1.6.0",
     "rxjs": "~6.2.0",
     "zone.js": "~0.8.26"
   },
