--- a/package.json
+++ b/package.json
@@ -27,8 +27,11 @@
     "chart.js": "^2.7.3",
     "core-js": "^2.5.4",
     "font-awesome": "^4.7.0",
+    "jquery": "^3.3.1",
+    "morris.js": "^0.5.0",
     "ng-snotify": "^4.3.1",
     "ng2-charts": "^1.6.0",
+    "raphael": "^2.2.7",
     "rxjs": "~6.2.0",
     "zone.js": "~0.8.26"
   },
