--- a/package.json
+++ b/package.json
@@ -22,13 +22,18 @@
     "@angular/router": "^6.1.0",
     "@ng-bootstrap/ng-bootstrap": "^4.0.0",
     "@types/googlemaps": "^3.30.16",
+    "angular-calendar": "^0.26.4",
     "angular-font-awesome": "^3.1.2",
     "bootstrap": "^4.1.3",
     "chart.js": "^2.7.3",
     "core-js": "^2.5.4",
+    "date-fns": "^1.30.1",
     "font-awesome": "^4.7.0",
+    "jquery": "^3.3.1",
+    "morris.js": "^0.5.0",
     "ng-snotify": "^4.3.1",
     "ng2-charts": "^1.6.0",
+    "raphael": "^2.2.7",
     "rxjs": "~6.2.0",
     "zone.js": "~0.8.26"
   },
